--- a/devtalles_/04-ecom-tesla/src/app/globals.css
+++ b/devtalles_/04-ecom-tesla/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --primary: #274494;
+  --primary: #42c4cd;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -13,7 +13,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb: 22, 28, 33;
   }
 }
 
